fix: Remove margins and paddings in overlay to remove gaps

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -219,7 +219,7 @@ input:focus, input:focus-visible{
     border: none;
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: skyblue;
     padding: 0;
 }
 
